--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,9 @@ canvas{
   display: block;
   position: relative;
   margin: auto;
+  box-shadow: 0px 0px 5px grey;
 }
 
-.colourPicker{
-  display: inline-block;
-  width: 80px;
-  height: 300px;
-  border: 1px dotted grey;
-}
-.color{
-  display: inline-block;
-  width: 30px;
-  height: 30px;
+.sliderContainer{
+  
 }
