--- a/css/style.css
+++ b/css/style.css
@@ -26,30 +26,33 @@ footer{
   font-size: 30px;
 }
 .title::after{
-  content: "";
+  content: "using only 2D vectors";
+  font-size: 14px;
+  text-align: center;
   position: absolute;
   top: 100%;
   left: 50%;
   width: 80%;
   height: 1px;
   transform: translateX(-50%);
-  margin-top: 5px;
-  border-bottom: 1px solid black;
+  padding-top: 3px;
+  margin-top: 7px;
+  border-top: 1px solid black;
 }
 
 .sliders{
   position: relative;
-  width: 330px;
+  width: 310px;
   margin: auto;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
 
 .hint{
   position: relative;
   width: 100px;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 40px;
   margin-bottom: 90px;
   background-color: lightgrey;
   border-radius: 0.5em;
@@ -57,8 +60,9 @@ footer{
   text-align: center;
   user-select: none;
 }
-.hint:hover::before{
+.hint::before{
   content: "";
+  display: none;
   position: absolute;
   width: 8px;
   height: 8px;
@@ -68,11 +72,24 @@ footer{
   transform: translateX(-50%) rotate(45deg);
   background-color: lightgrey;
 }
-.hint:hover::after{
+.hint::after{
   content: "Rotation Speed: ←/→, View Angle: ↑/↓, Number of Sides: +/-";
+  display: none;
   position: absolute;
   width: 160px;
   top: calc(100% + 10px);
   left: 50%;
   transform: translateX(-50%);
+}
+.hint:hover::before{
+  display: block;
+}
+.hint:hover::after{
+  display: block;
+}
+.hint:focus::before{
+  display: block;
+}
+.hint:focus::after{
+  display: block;
 }
